test/diagnostics/test_diagnostic.expected
--- Case 1: Simple secondary label ---
Error: main error message
  ──➤  test.wax:5:8
 3 │ line 3
 4 │ line 4
 5 │ line 5 error here
   ·        ^^^^^
 6 │ line 6
 7 │ line 7
   · ...
10 │ line 10
11 │ line 11
12 │ line 12 related here
   ·        ^^^^^^^ defined here
13 │ line 13
14 │ line 14

--- Case 2: Multi-line primary error ---
Error: multi-line error
 ──➤  test.wax:2:8
1 │ line 1
2 │ line 2 start here
  ·        ^^^^^^^^^^^
3 │ line 3 middle
  · ^^^^^^^^^^^^^^
4 │ line 4 end here
  · ^^^^^^^^^^^^^^^
5 │ line 5
6 │ 

--- Case 3: Multi-line secondary label ---
Error: error with multi-line secondary
 ──➤  test.wax:7:8
1 │ line 1
2 │ line 2
3 │ line 3 secondary start
  ·        ^^^^^^^^^^^^^^^^
4 │ line 4 secondary middle
  · ^^^^^^^^^^^^^^^^^^^^^^^^
5 │ line 5 secondary end
  · ^^^^^^^^^^^^^ multi-line secondary
6 │ line 6
7 │ line 7 main error
  ·        ^^^^^
8 │ line 8
9 │ 

--- Case 4: Long multi-line span ---
Error: long span error
  ──➤  test.wax:10:8
 8 │ line 8
 9 │ line 9
10 │ line 10
   ·        ^
11 │ line 11
   · ^^^^^^^^
12 │ line 12
   · ^^^^^^^^
   · ...
88 │ line 88
   · ^^^^^^^^
89 │ line 89
   · ^^^^^^^^
90 │ line 90
   · ^^^^^^^
91 │ line 91
92 │ line 92

--- Case 5: Error at end of file (EOF) ---
Error: Expecting '}'.
 ──➤  test.wax:3:1
1 │ fn x {
  ·      ^ This '{' might be unmatched.
2 │ let x = 10;
3 │ 
    ^
